# pico-tracker

./: CMakeLists.txt
data/: calibration.yml
release/: CMakeCache.txt  Makefile  cmake_install.cmake  handprojector_tracker_main
src/: main.cpp
